--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   .feedback-btn { padding: 8px 16px; border-radius: 8px; font-size: 10px; font-weight: bold; cursor: pointer; transition: 0.2s; text-transform: uppercase; }
   .btn-green { background: #16a34a; color: white; }
   .btn-fail { background: #991b1b; color: white; }
+  .clock-display { font-family: monospace; font-weight: bold; color: #dc2626; letter-spacing: 2px; }
 </style>
 </head>
 <body>
@@ -36,9 +37,13 @@
 </div>
 
 <div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
+  <div class="flex justify-center mb-6">
+    <div id="clock2" class="clock-display text-3xl">00:00:00</div>
+  </div>
+
   <div class="glass p-6 border border-red-600/20 mb-6">
     <div class="flex justify-between items-center mb-6">
-      <div id="clock2" class="text-red-500 font-bold text-2xl tracking-mono">00:00:00</div>
+      <div class="text-xs uppercase font-bold text-gray-500">Painel de Controle</div>
       <div class="flex gap-4">
         <button class="btn-red neon-red px-10" onclick="analyzeHistory()">📊 ANALISAR</button>
         <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
@@ -78,11 +83,15 @@
 </div>
 
 <div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
+  <div class="flex justify-center mb-6">
+    <div id="clock3" class="clock-display text-pink-500 text-4xl">00:00:00</div>
+  </div>
+
   <div class="flex justify-between items-center mb-8">
     <h1 class="text-3xl font-black text-pink-600 italic">💎 PAINEL VIP</h1>
     <button class="btn-gray text-xs" onclick="backToP2()">⬅️ VOLTAR</button>
   </div>
-  <div id="clock3" class="text-pink-500 font-bold text-3xl mb-4 text-center tracking-mono">00:00:00</div>
+  
   <div id="signalsVIP" class="w-full flex flex-col items-center mb-8"></div>
   <div class="glass p-6 rounded-xl border border-pink-600/20 mb-8 bg-black/40">
     <canvas id="chartVIP" height="130"></canvas>
@@ -143,7 +152,6 @@ function updateChartVIP(targetMult = 10) {
 
 async function sendFeedback(status) {
   alert("IA Notificada: Resultado " + (status === 'win' ? "Green" : "Red") + ". O algoritmo foi ajustado.");
-  // Aqui futuramente conectaremos a rota de feedback negativo/positivo
 }
 
 async function analyzeHistory(){
@@ -175,7 +183,7 @@ async function analyzeHistory(){
         </div>
       </div>`;
     
-    document.getElementById("iaStatusMsg").innerHTML = `"A IA identificou um padrão de ${txt}. Memória atualizada."`;
+    document.getElementById("iaStatusMsg").innerHTML = `"Padrão ${txt} detectado. Memória de histórico atualizada."`;
     updateChartPage2(mult);
     resText.innerHTML = "✅ CONCLUÍDO";
   } catch(e) { resText.innerHTML = "⚠️ ERRO NO SERVIDOR"; }
@@ -199,16 +207,4 @@ async function analyzeHistoryVIP(){
       <div class="signal-card glass border-pink-500 p-8 text-center bg-pink-950/30 w-full max-w-md">
         <h2 class="text-pink-500 font-black text-xl mb-2 italic">💎 ENTRADA ROSA</h2>
         <div class="text-7xl font-black text-white">×${mult.toFixed(2)}</div>
-        <p class="text-xs mt-3 text-pink-300 font-bold uppercase mb-4">ALCANCE IA: ${(mult * 1.3).toFixed(2)}x</p>
-        <div class="flex justify-center gap-3">
-          <button class="feedback-btn btn-green" onclick="sendFeedback('win')">✅ Green</button>
-          <button class="feedback-btn btn-fail" onclick="sendFeedback('loss')">❌ Red</button>
-        </div>
-      </div>`;
-    updateChartVIP(mult);
-    resVIP.innerHTML = "✅ SINAL GERADO";
-  } catch(e){ resVIP.innerHTML = "Erro."; }
-}
-</script>
-</body>
-</html>
+        
